--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,76 +4,175 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-        <servlet>
-            <servlet-name>servletdemo</servlet-name>
-            <servlet-class>com.bjsxt.servlet.DemoServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>servletdemo</servlet-name>
-            <url-pattern>/servletdemo.do</url-pattern>
-        </servlet-mapping>
+    <context-param>
+        <param-name>key1</param-name>
+        <param-value>BJSXT</param-value>
+    </context-param>
 
-        <servlet>
-            <servlet-name>getRequestDataServlet</servlet-name>
-            <servlet-class>com.bjsxt.servlet.GetRequestDataServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>getRequestDataServlet</servlet-name>
-            <url-pattern>/getInfo.do</url-pattern>
-        </servlet-mapping>
+    <context-param>
+        <param-name>key2</param-name>
+        <param-value>ITBZ</param-value>
+    </context-param>
 
-        <servlet>
-            <servlet-name>getRequestHeaderServlet</servlet-name>
-            <servlet-class>com.bjsxt.servlet.GetRequestHeaderServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>getRequestHeaderServlet</servlet-name>
-            <url-pattern>/getHeader.do</url-pattern>
-        </servlet-mapping>
+    <servlet>
+        <servlet-name>servletdemo</servlet-name>
+        <servlet-class>com.bjsxt.servlet.DemoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>servletdemo</servlet-name>
+        <url-pattern>/servletdemo.do</url-pattern>
+    </servlet-mapping>
 
-        <servlet>
-            <servlet-name>languageServlet</servlet-name>
-            <servlet-class>com.bjsxt.servlet.LanguageServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>languageServlet</servlet-name>
-            <url-pattern>/language.do</url-pattern>
-        </servlet-mapping>
+    <servlet>
+        <servlet-name>getRequestDataServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.GetRequestDataServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getRequestDataServlet</servlet-name>
+        <url-pattern>/getInfo.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getRequestHeaderServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.GetRequestHeaderServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getRequestHeaderServlet</servlet-name>
+        <url-pattern>/getHeader.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>languageServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.LanguageServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>languageServlet</servlet-name>
+        <url-pattern>/language.do</url-pattern>
+    </servlet-mapping>
 
 
-        <servlet>
-            <servlet-name>respCharacterServlet</servlet-name>
-            <servlet-class>com.bjsxt.servlet.RespCharacterServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>respCharacterServlet</servlet-name>
-            <url-pattern>/char.do</url-pattern>
-        </servlet-mapping>
+    <servlet>
+        <servlet-name>respCharacterServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.RespCharacterServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>respCharacterServlet</servlet-name>
+        <url-pattern>/char.do</url-pattern>
+    </servlet-mapping>
 
-        <servlet>
-            <servlet-name>respByteServlet</servlet-name>
-            <servlet-class>com.bjsxt.servlet.RespByteServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>respByteServlet</servlet-name>
-            <url-pattern>/byte.do</url-pattern>
-        </servlet-mapping>
+    <servlet>
+        <servlet-name>respByteServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.RespByteServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>respByteServlet</servlet-name>
+        <url-pattern>/byte.do</url-pattern>
+    </servlet-mapping>
 
-        <servlet>
-            <servlet-name>redirectServlet</servlet-name>
-            <servlet-class>com.bjsxt.servlet.RedirectServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>redirectServlet</servlet-name>
-            <url-pattern>/redirect.do</url-pattern>
-        </servlet-mapping>
+    <servlet>
+        <servlet-name>redirectServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.RedirectServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>redirectServlet</servlet-name>
+        <url-pattern>/redirect.do</url-pattern>
+    </servlet-mapping>
 
-        <servlet>
-            <servlet-name>downFileServlet</servlet-name>
-            <servlet-class>com.bjsxt.servlet.DownFileServlet</servlet-class>
-        </servlet>
-        <servlet-mapping>
-            <servlet-name>downFileServlet</servlet-name>
-            <url-pattern>/down.do</url-pattern>
-        </servlet-mapping>
+    <servlet>
+        <servlet-name>downFileServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.DownFileServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>downFileServlet</servlet-name>
+        <url-pattern>/down.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getBaseInfoServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.GetBaseInfoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getBaseInfoServlet</servlet-name>
+        <url-pattern>/getBaseInfo.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>contextReadInfoServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.ContextReadInfoServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>contextReadInfoServlet</servlet-name>
+        <url-pattern>/context.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>globalContainerServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.GlobalContainerServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>globalContainerServlet</servlet-name>
+        <url-pattern>/global.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getConfigInfoServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.GetConfigInfoServlet</servlet-class>
+        <init-param>
+            <param-name>key1</param-name>
+            <param-value>BJSXT</param-value>
+        </init-param>
+        <init-param>
+            <param-name>key2</param-name>
+            <param-value>ITBZ</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getConfigInfoServlet</servlet-name>
+        <url-pattern>/config.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>createCookieServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.CreateCookieServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>createCookieServlet</servlet-name>
+        <url-pattern>/create.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getCookieDataServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.GetCookieDataServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getCookieDataServlet</servlet-name>
+        <url-pattern>/getData.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>welcomeServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.WelcomeServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>welcomeServlet</servlet-name>
+        <url-pattern>/welcome.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>createHttpSessionServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.CreateHttpSessionServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>createHttpSessionServlet</servlet-name>
+        <url-pattern>/createSession.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>getHttpSessionDataServlet</servlet-name>
+        <servlet-class>com.bjsxt.servlet.GetHttpSessionDataServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>getHttpSessionDataServlet</servlet-name>
+        <url-pattern>/getSessionData.do</url-pattern>
+    </servlet-mapping>
 </web-app>
